syntax = "proto3";

package access_v1;

import "google/protobuf/empty.proto";
import "google/protobuf/wrappers.proto";

option go_package="github.com/semho/chat-microservices/pkg/access_v1;access_v1";

service AccessV1 {
  rpc Check(CheckRequest) returns (google.protobuf.Empty);
  rpc GetListAccess(GetListAccessRequest) returns (ListAccessResponse);
  rpc CreateAccess(CreateRequest) returns (CreateResponse);
  rpc DeleteAccess(DeleteRequest) returns (google.protobuf.Empty);
  rpc UpdateAccess(UpdateRequest) returns (google.protobuf.Empty);
}

message CheckRequest {
  string endpoint_address = 1;
}

message GetListAccessRequest {
  uint64 page_number = 1;
  uint64 page_size = 2;
}

message ListAccessResponse {
  repeated Access list = 1;
}

enum Role {
  user = 0;
  admin = 1;
}

message Access {
  int64 id = 1;
  Role role_id = 2;
  string path = 3;
}

message CreateRequest {
  Role role_id = 1;
  string path = 2;
}

message CreateResponse {
  int64 id = 1;
}

message DeleteRequest {
  int64 id = 1;
}

message UpdateRequest {
  int64 id = 1;
  google.protobuf.Int32Value role_id = 2;
  google.protobuf.StringValue path = 3;
}
